<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".survey">

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="invisible">

        <TextView
            android:id="@+id/survey"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:gravity="center"
            android:text="@string/survey"
            android:textSize="50dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="80dp"
            android:layout_marginBottom="500dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/work_time"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/worktime"
                android:textSize="25dp" />

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:orientation="horizontal">

                        <RadioGroup
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:orientation="horizontal">

                            <RadioButton
                                android:id="@+id/less2hour"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:text="@string/less2hour"
                                android:textSize="25dp" />

                            <RadioButton
                                android:id="@+id/_2_4hour"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:text="@string/_2_4hour"
                                android:textSize="25dp" />
                        </RadioGroup>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:orientation="horizontal">

                        <RadioGroup
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:orientation="horizontal">

                            <RadioButton
                                android:id="@+id/_4_8hour"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:text="@string/_4_8hour"
                                android:textSize="25dp" />

                            <RadioButton
                                android:id="@+id/more8hour"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:text="@string/more8hour"
                                android:textSize="25dp" />
                        </RadioGroup>
                    </LinearLayout>
                </LinearLayout>

            </RadioGroup>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_marginTop="220dp"
            android:layout_marginBottom="5dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/mutiaction"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/mutiaction"
                android:textSize="25dp" />

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <RadioButton
                    android:id="@+id/less10permin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/less10permin"
                    android:textSize="25dp" />

                <RadioButton
                    android:id="@+id/_11_20permin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/_11_20permin"
                    android:textSize="25dp" />

                <RadioButton
                    android:id="@+id/more20permin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/more21permin"
                    android:textSize="25dp" />

            </RadioGroup>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="370dp"
            android:layout_marginBottom="0dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/rest"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/rest"
                android:textSize="25dp" />

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <RadioButton
                    android:id="@+id/_1_2hour"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/_1_2hour"
                    android:textSize="25dp" />

                <RadioButton
                    android:id="@+id/_2_3hour"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/_2_3hour"
                    android:textSize="25dp" />

                <RadioButton
                    android:id="@+id/_3_4hour"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/_3_4hour"
                    android:textSize="25dp" />

                <RadioButton
                    android:id="@+id/more4hour"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/more4hour"
                    android:textSize="25dp" />

                <RadioButton
                    android:id="@+id/less1hour"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/less1hour"
                    android:textSize="25dp" />

                <TextView
                    android:id="@+id/serveynotanswered"
                    android:layout_width="295dp"
                    android:layout_height="49dp"
                    android:layout_marginBottom="40dp"
                    android:alpha="0"
                    android:baselineAligned="false"
                    android:text="請先完成問卷"
                    android:textColor="#FF0000"
                    android:textSize="30dp" />
            </RadioGroup>


        </LinearLayout>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/relativeLayout1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="-70dp">

        <TextView
            android:id="@+id/survey1"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:gravity="center"
            android:text="@string/survey"
            android:textSize="50dp" />

        <TextView
            android:id="@+id/survey1question"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="0dp"
            android:layout_marginTop="80dp"
            android:text="你是否過去一星期出現一次或以上肩痛、頸痛、手腕痛、小腿痛或腳踝痠痛?"
            android:textSize="30dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="367dp"
            android:layout_alignParentTop="true"
            android:layout_marginTop="211dp"
            android:orientation="horizontal">

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/survey1yes"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="有"
                    android:textSize="30dp" />

                <RadioButton
                    android:id="@+id/survey1no"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="沒有"
                    android:textSize="30dp" />

            </RadioGroup>

        </LinearLayout>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_alignParentBottom="true">

            <Button
                android:id="@+id/backtohomepage"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="返回"
                android:textSize="20dp" />

            <Button
                android:id="@+id/firstsurveysubmit"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="提交"
                android:textSize="20dp" />

        </LinearLayout>
    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>